@@ -1,3 +1,9 @@
+2007-01-21  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkblt.c: the capplet should not crash if
+	default group is not set in GConf (i.e. GConf part of the g-c-c
+	installation failed for some reason). Closing #398631
+
 2007-01-07  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gnome-keyboard-properties.c: (main): Fix a typo.
